--- a/public/template/login.html
+++ b/public/template/login.html
@@ -1,1 +1,4 @@
-<h1>Please login to use the application</h1>
+<h3>Please login to use the application</h3>
+<input type="text" placeholder="Username" ng-model="username" ng-enter="login()" />
+<input type="password" placeholder="Password" ng-model="password" ng-enter="login()" />
+<button ng-click="login()">Submit</button>
